--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,85 @@ body {
   margin: 0;
 }
 
+.wrap {
+  width: 1140px;
+  margin: 0 auto;
+}
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   max-width: 1140px;
   margin: 0 auto;
+  height: 100px;
+}
+.header__list {
+  display: flex;
+  list-style-type: none;
+}
+.header__item {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.header__link {
+  text-decoration: none;
+  font-size: 16px;
+  font-family: "Athiti", sans-serif;
+  font-weight: Bold;
+  color: #2c2c2c;
+}
+.header__link:hover {
+  color: #fc5a61;
+}
+.header__logo {
+  font-size: 29px;
+  font-weight: bold;
+  font-family: "Athiti", sans-serif;
+  text-decoration: none;
+  color: #2c2c2c;
+  text-transform: capitalize;
+}
+.header__button {
+  background-color: #fc5a61;
+  text-decoration: none;
+  padding: 15px 30px 15px 30px;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-family: "Athiti";
+  font-weight: 500;
+  color: #ffffff;
 }
 
 .container {
   background-color: #c6c6c6;
   height: 820px;
+  position: relative;
+}
+.container__text {
+  font-size: 80px;
+  font-family: "Montez", cursive;
+}
+.container__text span {
+  font-size: 140px;
+  margin: 0;
+  padding: 0;
+  color: #fc5a61;
+}
+.container__text p {
+  margin: 0;
+  font-family: "Athiti", sans-serif;
+  font-size: 80px;
+  line-height: 0.262;
+  font-weight: bold;
+}
+.container__center {
+  width: 790px;
+  height: 145px;
+  background-color: #f6f3ed;
+  position: absolute;
+  bottom: 0;
+  left: 200px;
 }
 
 /*# sourceMappingURL=style.css.map */
