--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@200;300;400;500;600;700&family=Montez&display=swap');
 $gray :#c6c6c6;
+$coral :#fc5a61;
+$text :#2c2c2c;
 body {
   margin: 0;
+}
+.wrap {
+  width: 1140px;
+  margin: 0 auto;
 }
 .header {
 display: flex;
@@ -9,8 +15,71 @@ display: flex;
   justify-content: space-between;
   max-width: 1140px;
   margin: 0 auto;
+  height: 100px;
+  &__list {
+    display: flex;
+    list-style-type: none;
+  }
+  &__item {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  &__link {
+    text-decoration: none;
+    font-size: 16px;
+    font-family: "Athiti", sans-serif;
+    font-weight: Bold;
+    color: $text;
+    &:hover{
+    color: #fc5a61;
+  }
+  }
+  &__logo {
+    font-size: 29px;
+    font-weight: bold;
+    font-family: "Athiti", sans-serif;
+    text-decoration: none;
+    color: $text;
+    text-transform: capitalize;
+  }
+  &__button {
+  background-color: $coral;
+    text-decoration: none;
+    padding: 15px 30px 15px 30px;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-family: 'Athiti';
+    font-weight: 500;
+    color: #ffffff;
+  }
 }
 .container {
   background-color:$gray ;
   height: 820px;
+  position: relative;
+  &__text {
+    font-size: 80px;
+    font-family: 'Montez', cursive;
+    span {
+      font-size: 140px;
+      margin: 0;
+      padding: 0;
+      color: #fc5a61;
+    }
+    p{
+      margin: 0;
+      font-family: 'Athiti', sans-serif;
+      font-size: 80px;
+      line-height: 0.262;
+      font-weight: bold;
+    }
+  }
+  &__center {
+    width: 790px;
+    height: 145px;
+    background-color: #f6f3ed;
+    position: absolute;
+    bottom: 0;
+    left: 200px;
+  }
 }
