--- a/css/style.scss
+++ b/css/style.scss
@@ -2,11 +2,13 @@
 $gray :#c6c6c6;
 $coral :#fc5a61;
 $text :#2c2c2c;
+$block :#1c1c1c;
+$whte :#ffff;
 body {
   margin: 0;
 }
 .wrap {
-  width: 1140px;
+  width: 1170px;
   margin: 0 auto;
 }
 .header {
@@ -48,7 +50,7 @@ display: flex;
     padding: 15px 30px 15px 30px;
     text-transform: uppercase;
     font-size: 16px;
-    font-family: 'Athiti';
+    font-family: "Athiti", sans-serif;
     font-weight: 500;
     color: #ffffff;
   }
@@ -80,6 +82,138 @@ display: flex;
     background-color: #f6f3ed;
     position: absolute;
     bottom: 0;
-    left: 200px;
+    left: 530px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    font-family: "Athiti", sans-serif;
+    font-size: 36px;
+    font-weight: bold;
+    p{
+      font-size: 21px;
+      margin: 0;
+    }
+  }
+}
+.welcome {
+  height: 670px;
+  margin-top: 150px;
+  &__wel {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__alex {
+    height: 335px;
+    width: 329px;
+    text-align: center;
+    h2 {
+      font-size: 38px;
+      color: $coral;
+      font-family: "Athiti", sans-serif;
+      margin: 0;
+    }
+    p {
+      font-size: 16px;
+      font-family: "Athiti", sans-serif;
+      font-weight: 500;
+      color: #262626;
+      line-height: 1;
+      margin: 0;
+    }
+  }
+  &__text {
+    margin-top: 60px;
+    font-family: "Montez", cursive;
+    text-align: center;
+    h2 {
+      margin: 0;
+      font-size: 109px;
+    }
+    p {
+      font-size: 15px;
+      font-family: "Athiti", sans-serif;
+      font-weight: 500;
+      margin: 0;
+    }
+  }
+  &__kris {
+    height: 335px;
+    width: 329px;
+    text-align: center;
+    h2 {
+      font-size: 38px;
+      color: $coral;
+      font-family: "Athiti", sans-serif;
+      margin: 0;
+    }
+    p {
+      font-size: 16px;
+      font-family: "Athiti", sans-serif;
+      font-weight: 500;
+      color: #262626;
+      line-height: 1;
+      margin: 0;
+    }
+  }
+  .span {
+    all: inherit;
+    font-size: 26px;
+    font-family: "Athiti", sans-serif;
+    font-weight: bold;
+    color: #fc5a61;
+    margin: 0;
+  }
+}
+.event {
+  background-color: $block;
+  text-align: center;
+  padding-top: 123px;
+  height: 1190px;
+  h2 {
+    font-family: "Montez", cursive;
+    font-size: 119px;
+    color: $whte;
+  }
+  &__main {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 70px;
+  }
+  &__cerem {
+    width: 555px;
+    height: 675px;
+    background-color:$whte ;
+  }
+  &__party {
+    width: 555px;
+    height: 675px;
+    background-color: $whte;
+  }
+  &__top1 {
+    background-color: #de5057;
+    height: 115px;
+    h2{
+      margin: 0;
+      font-size: 56px;
+      padding-top: 17px;
+      letter-spacing: 1px;
+    }
+  }
+  &__top2 {
+    background-color: #d2527f;
+    height: 115px;
+    h2{
+      margin: 0;
+      font-size: 56px;
+      padding-top: 17px;
+      letter-spacing: 1px;
+    }
+  }
+  &__time {
+    width: 360px;
+    height: 85px;
+    background-image: url("../img/ram2.png");
+    margin-left: 100px;
   }
 }
