--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Athiti:wght@200;300;400;500;600;700&family=Montez&display=swap");
 body {
-  margin: 0; }
+  margin: 0;
+}
 
 .wrap {
   width: 1170px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .header {
   display: flex;
@@ -12,173 +14,243 @@ body {
   justify-content: space-between;
   max-width: 1140px;
   margin: 0 auto;
-  height: 100px; }
-  .header__list {
-    display: flex;
-    list-style-type: none; }
-  .header__item {
-    margin-left: 20px;
-    margin-right: 20px; }
-  .header__link {
-    text-decoration: none;
-    font-size: 16px;
-    font-family: "Athiti", sans-serif;
-    font-weight: Bold;
-    color: #2c2c2c; }
-    .header__link:hover {
-      color: #fc5a61; }
-  .header__logo {
-    font-size: 29px;
-    font-weight: bold;
-    font-family: "Athiti", sans-serif;
-    text-decoration: none;
-    color: #2c2c2c;
-    text-transform: capitalize; }
-  .header__button {
-    background-color: #fc5a61;
-    text-decoration: none;
-    padding: 15px 30px 15px 30px;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-family: "Athiti", sans-serif;
-    font-weight: 500;
-    color: #ffffff; }
+  height: 100px;
+}
+.header__list {
+  display: flex;
+  list-style-type: none;
+}
+.header__item {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.header__link {
+  text-decoration: none;
+  font-size: 16px;
+  font-family: "Athiti", sans-serif;
+  font-weight: Bold;
+  color: #2c2c2c;
+}
+.header__link:hover {
+  color: #fc5a61;
+}
+.header__logo {
+  font-size: 29px;
+  font-weight: bold;
+  font-family: "Athiti", sans-serif;
+  text-decoration: none;
+  color: #2c2c2c;
+  text-transform: capitalize;
+}
+.header__button {
+  background-color: #fc5a61;
+  text-decoration: none;
+  padding: 15px 30px 15px 30px;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-family: "Athiti", sans-serif;
+  font-weight: 500;
+  color: #ffffff;
+}
 
 .container {
   background-color: #c6c6c6;
   height: 820px;
-  position: relative; }
-  .container__text {
-    font-size: 80px;
-    font-family: 'Montez', cursive; }
-    .container__text span {
-      font-size: 140px;
-      margin: 0;
-      padding: 0;
-      color: #fc5a61; }
-    .container__text p {
-      margin: 0;
-      font-family: 'Athiti', sans-serif;
-      font-size: 80px;
-      line-height: 0.262;
-      font-weight: bold; }
-  .container__center {
-    width: 790px;
-    height: 145px;
-    background-color: #f6f3ed;
-    position: absolute;
-    bottom: 0;
-    left: 530px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-    font-family: "Athiti", sans-serif;
-    font-size: 36px;
-    font-weight: bold; }
-    .container__center p {
-      font-size: 21px;
-      margin: 0; }
+  position: relative;
+}
+.container__text {
+  font-size: 80px;
+  font-family: "Montez", cursive;
+}
+.container__text span {
+  font-size: 140px;
+  margin: 0;
+  padding: 0;
+  color: #fc5a61;
+}
+.container__text p {
+  margin: 0;
+  font-family: "Athiti", sans-serif;
+  font-size: 80px;
+  line-height: 0.262;
+  font-weight: bold;
+}
+.container__center {
+  width: 790px;
+  height: 145px;
+  background-color: #f6f3ed;
+  position: absolute;
+  bottom: 0;
+  left: 530px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  font-family: "Athiti", sans-serif;
+  font-size: 36px;
+  font-weight: bold;
+}
+.container__center p {
+  font-size: 21px;
+  margin: 0;
+}
 
 .welcome {
   height: 670px;
-  margin-top: 150px; }
-  .welcome__wel {
-    display: flex;
-    justify-content: space-between; }
-  .welcome__alex {
-    height: 335px;
-    width: 329px;
-    text-align: center; }
-    .welcome__alex h2 {
-      font-size: 38px;
-      color: #fc5a61;
-      font-family: "Athiti", sans-serif;
-      margin: 0; }
-    .welcome__alex p {
-      font-size: 16px;
-      font-family: "Athiti", sans-serif;
-      font-weight: 500;
-      color: #262626;
-      line-height: 1;
-      margin: 0; }
-  .welcome__text {
-    margin-top: 60px;
-    font-family: "Montez", cursive;
-    text-align: center; }
-    .welcome__text h2 {
-      margin: 0;
-      font-size: 109px; }
-    .welcome__text p {
-      font-size: 15px;
-      font-family: "Athiti", sans-serif;
-      font-weight: 500;
-      margin: 0; }
-  .welcome__kris {
-    height: 335px;
-    width: 329px;
-    text-align: center; }
-    .welcome__kris h2 {
-      font-size: 38px;
-      color: #fc5a61;
-      font-family: "Athiti", sans-serif;
-      margin: 0; }
-    .welcome__kris p {
-      font-size: 16px;
-      font-family: "Athiti", sans-serif;
-      font-weight: 500;
-      color: #262626;
-      line-height: 1;
-      margin: 0; }
-  .welcome .span {
-    all: inherit;
-    font-size: 26px;
-    font-family: "Athiti", sans-serif;
-    font-weight: bold;
-    color: #fc5a61;
-    margin: 0; }
+  margin-top: 150px;
+  background-image: url("../img/bg.png");
+}
+.welcome__wel {
+  display: flex;
+  justify-content: space-between;
+}
+.welcome__alex {
+  height: 335px;
+  width: 329px;
+  text-align: center;
+}
+.welcome__alex h2 {
+  font-size: 38px;
+  color: #fc5a61;
+  font-family: "Athiti", sans-serif;
+  margin: 0;
+}
+.welcome__alex p {
+  font-size: 16px;
+  font-family: "Athiti", sans-serif;
+  font-weight: 500;
+  color: #262626;
+  line-height: 1;
+  margin: 0;
+}
+.welcome__text {
+  margin-top: 60px;
+  font-family: "Montez", cursive;
+  text-align: center;
+}
+.welcome__text h2 {
+  margin: 0;
+  font-size: 109px;
+}
+.welcome__text p {
+  font-size: 15px;
+  font-family: "Athiti", sans-serif;
+  font-weight: 500;
+  margin: 0;
+}
+.welcome__kris {
+  height: 335px;
+  width: 329px;
+  text-align: center;
+}
+.welcome__kris h2 {
+  font-size: 38px;
+  color: #fc5a61;
+  font-family: "Athiti", sans-serif;
+  margin: 0;
+}
+.welcome__kris p {
+  font-size: 16px;
+  font-family: "Athiti", sans-serif;
+  font-weight: 500;
+  color: #262626;
+  line-height: 1;
+  margin: 0;
+}
+.welcome .span {
+  all: inherit;
+  font-size: 26px;
+  font-family: "Athiti", sans-serif;
+  font-weight: bold;
+  color: #fc5a61;
+  margin: 0;
+}
 
 .event {
   background-color: #1c1c1c;
   text-align: center;
   padding-top: 123px;
-  height: 1190px; }
-  .event h2 {
-    font-family: "Montez", cursive;
-    font-size: 119px;
-    color: #ffff; }
-  .event__main {
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 70px; }
-  .event__cerem {
-    width: 555px;
-    height: 675px;
-    background-color: #ffff; }
-  .event__party {
-    width: 555px;
-    height: 675px;
-    background-color: #ffff; }
-  .event__top1 {
-    background-color: #de5057;
-    height: 115px; }
-    .event__top1 h2 {
-      margin: 0;
-      font-size: 56px;
-      padding-top: 17px;
-      letter-spacing: 1px; }
-  .event__top2 {
-    background-color: #d2527f;
-    height: 115px; }
-    .event__top2 h2 {
-      margin: 0;
-      font-size: 56px;
-      padding-top: 17px;
-      letter-spacing: 1px; }
-  .event__time {
-    width: 360px;
-    height: 85px;
-    background-image: url("../img/ram2.png");
-    margin-left: 100px; }
+  height: 1190px;
+}
+.event h2 {
+  font-family: "Montez", cursive;
+  font-size: 119px;
+  color: #ffff;
+}
+.event__main {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 70px;
+}
+.event__cerem {
+  width: 555px;
+  height: 675px;
+  background-color: #ffff;
+}
+.event__party {
+  width: 555px;
+  height: 675px;
+  background-color: #ffff;
+}
+.event__top1 {
+  background-color: #de5057;
+  height: 115px;
+}
+.event__top1 h2 {
+  margin: 0;
+  font-size: 56px;
+  padding-top: 17px;
+  letter-spacing: 1px;
+}
+.event__top2 {
+  background-color: #d2527f;
+  height: 115px;
+}
+.event__top2 h2 {
+  margin: 0;
+  font-size: 56px;
+  padding-top: 17px;
+  letter-spacing: 1px;
+}
+.event__time {
+  width: 360px;
+  height: 85px;
+  background-image: url("../img/ram2.png");
+  margin-left: 100px;
+  margin-top: 45px;
+}
+.event__time h2 {
+  margin: 0;
+  font-size: 25px;
+  font-family: "Titillium Web", sans-serif;
+  font-weight: bold;
+  color: #2c2c2c;
+  padding-top: 20px;
+}
+.event__club {
+  padding-top: 63px;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1;
+}
+.event img {
+  margin-top: 35px;
+}
+
+.time {
+  text-align: center;
+}
+.time__slider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.time__circle {
+  width: 340px;
+  height: 340px;
+  background-color: #5d5d5d;
+  border-radius: 50%;
+}
 
 /*# sourceMappingURL=style.css.map */
