--- a/css/style.scss
+++ b/css/style.scss
@@ -99,6 +99,7 @@ display: flex;
 .welcome {
   height: 670px;
   margin-top: 150px;
+  background-image: url("../img/bg.png");
   &__wel {
     display: flex;
     justify-content: space-between;
@@ -215,5 +216,38 @@ display: flex;
     height: 85px;
     background-image: url("../img/ram2.png");
     margin-left: 100px;
+    margin-top: 45px;
+    h2 {
+      margin: 0;
+      font-size: 25px;
+      font-family: 'Titillium Web', sans-serif;
+      font-weight: bold;
+      color: $text;
+      padding-top: 20px;
+    }
+  }
+  &__club {
+    padding-top: 63px;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1;
+  }
+  img {
+    margin-top: 35px;
+  }
+}
+.time {
+  text-align: center;
+  &__slider {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__circle {
+    width: 340px;
+    height: 340px;
+    background-color: #5d5d5d;
+    border-radius: 50%;
   }
 }
