--- a/css/slick.css
+++ b/css/slick.css
@@ -78,9 +78,11 @@
 {
     display: none;
     float: left;
-
-    height: 100%;
+    width: 300px;
+    height: 340px;
     min-height: 1px;
+    margin-right: 10px;
+
 }
 [dir='rtl'] .slick-slide
 {
