--- a/css/style.scss
+++ b/css/style.scss
@@ -82,7 +82,7 @@ display: flex;
     background-color: #f6f3ed;
     position: absolute;
     bottom: 0;
-    left: 530px;
+    left: 50%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -344,4 +344,14 @@ display: flex;
     padding-top: 20px;
   }
 }
+.family {
+  background-color: #d2527f;
+  height: 345px;
+  &__cody {
+    width: 345px;
+    height: 345px;
+    background-color: #5d5d5d;
+  }
+}
+
 
