--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@ $block :#1c1c1c;
 $whte :#ffff;
 body {
   margin: 0;
+  width: 1920px;
 }
 .wrap {
   width: 1170px;
@@ -82,7 +83,9 @@ display: flex;
     background-color: #f6f3ed;
     position: absolute;
     bottom: 0;
-    left: 50%;
+    right: 0;
+    margin: auto;
+    left: 0;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -347,10 +350,19 @@ display: flex;
 .family {
   background-color: #d2527f;
   height: 345px;
+  position: relative;
+  margin-top: 200px;
   &__cody {
     width: 345px;
     height: 345px;
     background-color: #5d5d5d;
+    margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    border-radius: 50%;
+    border: solid 20px #ffffff;
   }
 }
 
